--- a/call-to-action/index.html
+++ b/call-to-action/index.html
@@ -173,7 +173,7 @@
 </tr>
 <tr>
 <td style="text-align:left"><strong>Machine Learning</strong></td>
-<td style="text-align:left">H2O.ai, AutoML, Driverless AI, Scikit-Learn, Tensorflow 2, Featuretools</td>
+<td style="text-align:left">H2O.ai, AutoML, Driverless AI, Scikit-Learn, Tensorflow 2, Featuretools, Google AI Platform, Colab</td>
 </tr>
 <tr>
 <td style="text-align:left"><strong>Cloud Computing</strong></td>
@@ -197,7 +197,11 @@
 </tr>
 <tr>
 <td style="text-align:left"><strong>Operating System</strong></td>
-<td style="text-align:left">PopOS/Linux</td>
+<td style="text-align:left">PopOS/Linux, BASH, Vagrant</td>
+</tr>
+<tr>
+<td style="text-align:left"><strong>Tools</strong></td>
+<td style="text-align:left">Git/Gitflow, VS Code, Spyder</td>
 </tr>
 </tbody>
 </table>
