--- a/portfolio/00001_introduction_to_backtrader/index.html
+++ b/portfolio/00001_introduction_to_backtrader/index.html
@@ -158,7 +158,7 @@
             <h1>Project 001</h1>
           </div>
           <div class="content"><h1 id="introduction-to-backtrader">Introduction to Backtrader</h1>
-<p>Backtrader is a great back-testing framework for python. It also allows for the ability to implement the algorithm using brokers like Interactive Brokers.</p>
+<p>Backtrader is a great back-testing framework for Python. It also allows for the ability to deploy your algorithm using brokers like Interactive Brokers.</p>
 <p>Here I have created a series of Jupyter Notebooks leading to the back-testing of Ichimoku Kinko Hyo. It implements some additional tests like using the Chikou (lagging) span which were missing from all the other back-tests I have seen on the internet.</p>
 <p>Who knows one day I may turn them into a mini back-testing course using Backtrader!</p>
 </div>
