--- a/index.html
+++ b/index.html
@@ -474,8 +474,8 @@
           
           <div class="clearfix">
             <span class="skillbar-title">Blockchain</span>
-            <span class="skill-bar-percent">10%</span>
-            <div class="skillbar" data-percent="10%">
+            <span class="skill-bar-percent">30%</span>
+            <div class="skillbar" data-percent="30%">
               <div class="skillbar-bar"></div>
             </div>
           </div>
@@ -580,7 +580,7 @@
 </tr>
 <tr>
 <td style="text-align:left"><strong>Machine Learning</strong></td>
-<td style="text-align:left">H2O.ai, AutoML, Driverless AI, Scikit-Learn, Tensorflow 2, Featuretools</td>
+<td style="text-align:left">H2O.ai, AutoML, Driverless AI, Scikit-Learn, Tensorflow 2, Featuretools, Google AI Platform, Colab</td>
 </tr>
 <tr>
 <td style="text-align:left"><strong>Cloud Computing</strong></td>
@@ -604,7 +604,11 @@
 </tr>
 <tr>
 <td style="text-align:left"><strong>Operating System</strong></td>
-<td style="text-align:left">PopOS/Linux</td>
+<td style="text-align:left">PopOS/Linux, BASH, Vagrant</td>
+</tr>
+<tr>
+<td style="text-align:left"><strong>Tools</strong></td>
+<td style="text-align:left">Git/Gitflow, VS Code, Spyder</td>
 </tr>
 </tbody>
 </table>
