--- a/call-to-action/index.html
+++ b/call-to-action/index.html
@@ -181,7 +181,7 @@
 </tr>
 <tr>
 <td style="text-align:left"><strong>Data Analytics</strong></td>
-<td style="text-align:left">KNIME Analytic, Pandas, Koalas, Dask, Datalab/Jupyter, Anaconda, Numpy</td>
+<td style="text-align:left">KNIME Analytic, Pandas, Koalas, Dask, Anaconda, Numpy</td>
 </tr>
 <tr>
 <td style="text-align:left"><strong>Statistics (Bayesian and Frequentist)</strong></td>
@@ -197,11 +197,11 @@
 </tr>
 <tr>
 <td style="text-align:left"><strong>Operating System</strong></td>
-<td style="text-align:left">PopOS/Linux, BASH, Vagrant</td>
+<td style="text-align:left">Linux, BASH, Xonsh, Vagrant, Btrfs</td>
 </tr>
 <tr>
 <td style="text-align:left"><strong>Tools</strong></td>
-<td style="text-align:left">Git/Gitflow, VS Code, Spyder</td>
+<td style="text-align:left">Git/Gitflow, Visual Studio Code, Datalab/Jupyter/IPython</td>
 </tr>
 </tbody>
 </table>
