--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
 </tr>
 <tr>
 <td style="text-align:left"><strong>Data Analytics</strong></td>
-<td style="text-align:left">KNIME Analytic, Pandas, Koalas, Dask, Datalab/Jupyter, Anaconda, Numpy</td>
+<td style="text-align:left">KNIME Analytic, Pandas, Koalas, Dask, Anaconda, Numpy</td>
 </tr>
 <tr>
 <td style="text-align:left"><strong>Statistics (Bayesian and Frequentist)</strong></td>
@@ -604,11 +604,11 @@
 </tr>
 <tr>
 <td style="text-align:left"><strong>Operating System</strong></td>
-<td style="text-align:left">PopOS/Linux, BASH, Vagrant</td>
+<td style="text-align:left">Linux, BASH, Xonsh, Vagrant, Btrfs</td>
 </tr>
 <tr>
 <td style="text-align:left"><strong>Tools</strong></td>
-<td style="text-align:left">Git/Gitflow, VS Code, Spyder</td>
+<td style="text-align:left">Git/Gitflow, Visual Studio Code, Datalab/Jupyter/IPython</td>
 </tr>
 </tbody>
 </table>
@@ -759,8 +759,8 @@
           
           <div class="single-testimonial">
             <div class="testimonial-holder">
-              <img class="img-fluid" src="./images/clients/client2.jpg" alt="Kamal Bhradwaj">
-              <h2>Kamal Bhradwaj</h2>
+              <img class="img-fluid" src="./images/clients/client2.jpg" alt="Kamal Bhardwaj">
+              <h2>Kamal Bhardwaj</h2>
               <span>Senior Lighting Artist, Cinesite, Canada</span>
               <p><i class="fa fa-quote-left"></i> I have known Manuj for past fifteen years and I can very well say that he was instrumental in motivating and inspiring me. His dedication and focus are unparalleled. Always motivated and inspires other to achieve, always raising the bar for himself and all those around him. He is an excellent technical artist with an eye for detail. <i class="fa fa-quote-right"></i></p>
             </div>
