--- a/call-to-action/index.html
+++ b/call-to-action/index.html
@@ -201,7 +201,7 @@
 </tr>
 <tr>
 <td style="text-align:left"><strong>Tools</strong></td>
-<td style="text-align:left">Git/Gitflow, Visual Studio Code, Datalab/Jupyter</td>
+<td style="text-align:left">Git/Gitflow, Visual Studio Code, Datalab/Jupyter, Streamlit</td>
 </tr>
 </tbody>
 </table>
