--- a/about/index.html
+++ b/about/index.html
@@ -158,7 +158,7 @@
         <div class="content">
           <p>“My journey into AI started 20 years ago when I bought my first AI book from a roadside shop in Old Delhi. Ever since I followed the road less travelled and believed in doing things differently by taking risks on innovation and emerging technologies.</p>
 <p>In the last 20 years, I have done 2 startups - including India&rsquo;s first AI and game programming school, lead, consulted and coached many businesses, academia and individuals in India, Singapore and Indonesia in emerging technologies such as (Serious) Games, Simulations and my latest love - Data Science. I am a self-taught lifelong-learner who believes in a hands-on approach to technical management and leadership.</p>
-<p>When I am not playing with Data or my daughter, I loves to play retro video games, research emerging technologies, study probability and statistics, analyze risk markets and trade.</p>
+<p>When I am not playing with Data or my daughter, I love to play retro video games, research emerging technologies, study probability and statistics, analyze risk markets and trade.</p>
 <p>I am an Indian national who can speak Hindi, English and Coding.”</p>
 
         </div>
