--- a/portfolio/00002_nifty50_correlation/index.html
+++ b/portfolio/00002_nifty50_correlation/index.html
@@ -73,7 +73,7 @@
     
     <div class="menu-container menu-normal">
       <ul class="desktop-menu list-inline mb-0 justify-content-end" id="desktop-menu">
-        <a class="mr-auto" href="../../datascience">
+        <a class="mr-auto" href="/datascience">
           
           <img class="img-fluid" width="150px" src="https://manujchandra.github.io/datascience/images/logo-dark.png"
             alt="Data Science Solutions">
@@ -107,7 +107,7 @@
             <span></span>
           </div>
         </a>
-        <div class="mobile-menu-logo"><a href="../../datascience"><img class="img-fluid"
+        <div class="mobile-menu-logo"><a href="/datascience"><img class="img-fluid"
               src="https://manujchandra.github.io/datascience/images/logo-dark.png" alt="Data Science Solutions"></a>
         </div>
         <div class="menu-slider">
