Update Manuj_Chandra_Data_Science_Resume.pdf and index.html

--- a/index.html
+++ b/index.html
@@ -866,6 +866,15 @@
             </div>
           </div>
           
+          <div class="single-testimonial">
+            <div class="testimonial-holder">
+              <img class="img-fluid" src="./images/clients/client2.jpg" alt="Kamal Bhardwaj">
+              <h2>Kamal Bhardwaj</h2>
+              <span>Worked on Movies such as Tarzan, Iron Man 3, Sully, Okja et. al as VFX Artist</span>
+              <p><i class="fa fa-quote-left"></i> I have known Manuj for past fifteen years and I can very well say that he was instrumental in motivating and inspiring me. His dedication and focus are unparalleled. Always motivated and inspires other to achieve, always raising the bar for himself and all those around him. He is an excellent technical artist with an eye for detail. <i class="fa fa-quote-right"></i></p>
+            </div>
+          </div>
+          
         </div>
       </div>
     </div>
