Update index.html, index.html, index.xml, and 7 more files

--- a/call-to-action/index.html
+++ b/call-to-action/index.html
@@ -185,27 +185,27 @@
 </tr>
 <tr>
 <td style="text-align:left"><strong>Data Analytics</strong></td>
-<td style="text-align:left">KNIME Analytic, Pandas, Koalas, Dask, Anaconda, Numpy</td>
+<td style="text-align:left">KNIME Analytic, Pandas, Koalas, Dask, Numpy</td>
 </tr>
 <tr>
 <td style="text-align:left"><strong>Statistics (Bayesian and Frequentist)</strong></td>
 <td style="text-align:left">PyMC3, scipy.stats, Statsmodels</td>
 </tr>
 <tr>
-<td style="text-align:left"><strong>Blockchain</strong></td>
-<td style="text-align:left">Hyperledger Fabric</td>
+<td style="text-align:left"><strong>Web 3.0</strong></td>
+<td style="text-align:left">IPFS</td>
 </tr>
 <tr>
 <td style="text-align:left"><strong>Languages</strong></td>
-<td style="text-align:left">Python, C#</td>
+<td style="text-align:left">Python, C#, LaTeX</td>
 </tr>
 <tr>
 <td style="text-align:left"><strong>Operating System</strong></td>
-<td style="text-align:left">Linux, BASH, Xonsh, Vagrant, Btrfs</td>
+<td style="text-align:left">GNU/Linux, Nix, BASH, Xonsh, Vagrant, Btrfs</td>
 </tr>
 <tr>
 <td style="text-align:left"><strong>Tools</strong></td>
-<td style="text-align:left">Git/Gitflow, Visual Studio Code, Datalab/Jupyter, Streamlit</td>
+<td style="text-align:left">Git/Gitflow, Visual Studio Code, Workbench/Jupyter, Streamlit, Anaconda</td>
 </tr>
 </tbody>
 </table>
