--- a/call-to-action/index.html
+++ b/call-to-action/index.html
@@ -48,7 +48,7 @@
 
   
   <meta property="og:title" content="NEED DATA SCIENCE SERVICES?" />
-<meta property="og:description" content="Tools and Technologies:    Domain Tools     Business Intelligence and Visualization Tableau, Matplotlib, Seaborn, Plotley, Bokeh, Superset   Data Engineering Cloud SQL, Spanner, BigTable, BiqQuery, Dataflow (Apache Beam), PubSub, Cloud Functions, DataProc (Hadoop/Spark), DataPrep, Composer (Apache Airflow), Firestore, Data Fusion, Docker, Kubernetes, Regex   Machine Learning H2O." />
+<meta property="og:description" content="Tools and Technologies:    Domain Tools     Business Intelligence and Visualization Tableau, Matplotlib, Seaborn, Plotley, Bokeh, Superset   Data Engineering Cloud SQL, Spanner, BigTable, BigQuery, Dataflow (Apache Beam), PubSub, Cloud Functions, DataProc (Hadoop/Spark), DataPrep, Composer (Apache Airflow), Firestore, Data Fusion, Docker, Kubernetes, Regex   Machine Learning H2O." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="/call-to-action/" /><meta property="article:section" content="" />
 
@@ -173,11 +173,11 @@
 </tr>
 <tr>
 <td style="text-align:left"><strong>Data Engineering</strong></td>
-<td style="text-align:left">Cloud SQL, Spanner, BigTable, BiqQuery, Dataflow (Apache Beam), PubSub, Cloud Functions, DataProc (Hadoop/Spark), DataPrep, Composer (Apache Airflow), Firestore, Data Fusion, Docker, Kubernetes, Regex</td>
+<td style="text-align:left">Cloud SQL, Spanner, BigTable, BigQuery, Dataflow (Apache Beam), PubSub, Cloud Functions, DataProc (Hadoop/Spark), DataPrep, Composer (Apache Airflow), Firestore, Data Fusion, Docker, Kubernetes, Regex</td>
 </tr>
 <tr>
 <td style="text-align:left"><strong>Machine Learning</strong></td>
-<td style="text-align:left">H2O.ai, AutoML, Driverless AI, Scikit-Learn, Tensorflow 2, Featuretools, Google AI Platform, Colab</td>
+<td style="text-align:left">H2O.ai, AutoML, Driverless AI, Scikit-Learn, Tensorflow 2, Featuretools, Google VertexAI, Colab, Langchain, LlamaIndex, VectorDBs - Chroma, FAISS, Pineconeb</td>
 </tr>
 <tr>
 <td style="text-align:left"><strong>Cloud Computing</strong></td>
@@ -192,16 +192,20 @@
 <td style="text-align:left">PyMC3, scipy.stats, Statsmodels</td>
 </tr>
 <tr>
-<td style="text-align:left"><strong>Web 3.0</strong></td>
-<td style="text-align:left">IPFS</td>
-</tr>
-<tr>
 <td style="text-align:left"><strong>Languages</strong></td>
 <td style="text-align:left">Python, C#, LaTeX</td>
 </tr>
 <tr>
+<td style="text-align:left"><strong>Web 3.0</strong></td>
+<td style="text-align:left">IPFS</td>
+</tr>
+<tr>
+<td style="text-align:left"><strong>Cybersecurity</strong></td>
+<td style="text-align:left">GnuPG/GPG</td>
+</tr>
+<tr>
 <td style="text-align:left"><strong>Operating System</strong></td>
-<td style="text-align:left">GNU/Linux, Nix, BASH, Xonsh, Vagrant, Btrfs</td>
+<td style="text-align:left">Debian GNU/Linux, BASH, Xonsh, Vagrant, Btrfs</td>
 </tr>
 <tr>
 <td style="text-align:left"><strong>Tools</strong></td>
