--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@
 </tr>
 <tr>
 <td style="text-align:left"><strong>Machine Learning</strong></td>
-<td style="text-align:left">H2O.ai, AutoML, Driverless AI, Scikit-Learn, Tensorflow 2, Featuretools, Google VertexAI, Colab, Langchain, LlamaIndex, VectorDBs - Chroma, FAISS, Pineconeb, Huggingface</td>
+<td style="text-align:left">H2O.ai, AutoML, Driverless AI, Scikit-Learn, Tensorflow 2, Featuretools, Google VertexAI, Colab, Langchain, LlamaIndex, VectorDBs - Chroma, FAISS, Pinecone, Huggingface</td>
 </tr>
 <tr>
 <td style="text-align:left"><strong>Cloud Computing</strong></td>
