--- a/about/index.html
+++ b/about/index.html
@@ -50,7 +50,7 @@
   <meta property="og:image" content="/images/backgrounds/portrait.jpg" />
   
   <meta property="og:title" content="PROFILE" />
-<meta property="og:description" content="“Vision : Enable passionate individuals and organizations to successfully transition and thrive in the new Generative AI economy." />
+<meta property="og:description" content="“Vision : Enable progressive individuals and organizations to successfully transition and thrive in the new Generative AI economy." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="/about/" /><meta property="article:section" content="" />
 
@@ -162,7 +162,7 @@
     <div class="row">
       <div class="col-lg-10 mx-auto">
         <div class="content">
-          <p><em>“Vision : Enable passionate individuals and organizations to successfully transition and thrive in the new Generative AI economy.”</em></p>
+          <p><em>“Vision : Enable progressive individuals and organizations to successfully transition and thrive in the new Generative AI economy.”</em></p>
 <p>“My journey into AI started 20 years ago when I bought my first AI book from a roadside shop in Old Delhi. Ever since I followed the road less travelled and believed in doing things differently by taking risks on innovation and emerging technologies.</p>
 <p>In the last 20 years, I have done 2 startups - including India&rsquo;s first AI and game programming school, lead, consulted and coached many businesses, academia and individuals in India, Singapore, Australia, U.K and Indonesia in emerging technologies such as (Serious) Games, Simulations and my latest love - Data Science. I am a multipotentialite, self-taught lifelong-learner who believes in a hands-on approach to technical management and leadership.</p>
 <p>When I am not playing with data or my daughter, I love to play retro video games, research emerging technologies, study probability and statistics and analyze risk markets.</p>
